[metadata]
name = pretix-file-concatenator
version = 1.0.0
description = Appends FILE-type question attachments (PDF, JPG, PNG) to Pretix ticket PDFs
author = Plombier Services
author_email = sebastien.schwaab@gmail.com
license = Apache Software License
python_requires = >=3.11

[options]
packages = find:
include_package_data = True
install_requires =
    pretix
    Pillow>=10.0.0
    pypdf>=3.0.0

[options.entry_points]
pretix.plugin =
    pretix_file_concatenator = pretix_file_concatenator:FileConcatenatorApp
