[metadata]
name = pretix-modern-theme
version = 1.0.0
description = Modern responsive theme for Pretix presale interface
author = Plombier Services
author_email = sebastien.schwaab@gmail.com
license = Apache Software License
python_requires = >=3.11

[options]
packages = find:
include_package_data = True
install_requires =
    pretix

[options.entry_points]
pretix.plugin =
    pretix_modern_theme = pretix_modern_theme:ModernThemeApp
