[metadata]
name = pretix-signature-field
version = 1.0.0
description = Adds a handwritten signature question type to the pretix checkout process
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Plombier Services
author_email = dev@plombier-services.fr
license = Apache-2.0
url = https://github.com/plombier-services/pretix-signature-field
project_urls =
    Source Code = https://github.com/plombier-services/pretix-signature-field
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    pretix

[options.entry_points]
pretix.plugin =
    pretix_signature_field = pretix_signature_field.apps:SignatureFieldApp

[options.package_data]
pretix_signature_field =
    static/pretix_signature_field/*.js
    static/pretix_signature_field/*.css
    templates/pretix_signature_field/*.html
    locale/*/LC_MESSAGES/*.po
    locale/*/LC_MESSAGES/*.mo
